# duckdb_gcs

./: CMakeLists.txt  Makefile  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: gcs_extension.cpp  gcs_file_handle.cpp  gcs_file_system.cpp
src/include/: gcs_extension.hpp  gcs_file_handle.hpp  gcs_file_system.hpp
test/gcs/: gcs.test
