cmake_minimum_required(VERSION 2.8.12)

# Set extension name here
set(TARGET_NAME gcs)

# DuckDB's extension distribution supports vcpkg. As such, dependencies can be
# added in ./vcpkg.json and then used in cmake with find_package. Feel free to
# remove or replace with other dependencies. Note that it should also be removed
# from vcpkg.json to prevent needlessly installing it..
find_package(OpenSSL REQUIRED)

set(EXTENSION_NAME ${TARGET_NAME}_extension)
set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)

project(${TARGET_NAME})
include_directories(src/include)

set(EXTENSION_SOURCES src/gcs_extension.cpp src/gcs_file_system.cpp src/gcs_file_handle.cpp)

build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})

find_package(google_cloud_cpp_storage REQUIRED)

# Link OpenSSL in both the static library as the loadable extension
target_link_libraries(${EXTENSION_NAME} google-cloud-cpp::storage)
target_link_libraries(${LOADABLE_EXTENSION_NAME} google-cloud-cpp::storage)

install(
  TARGETS ${EXTENSION_NAME}
  EXPORT "${DUCKDB_EXPORT_SET}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")
